--- a/css/960_12_col.css
+++ b/css/960_12_col.css
@@ -17,20 +17,62 @@ body {
   min-width: 960px;
   background-image:url('file://localhost/Users/Michelle/Michelle/Web%20Development/2013/8:22:13%20-%20Brilliant%20Weddings/hello.jpg');
   background-repeat: repeat;
+  font-family: verdana;
+  font-size: 12px;
+  color: #5f656c;
+
 }
 
+a {
+  color: #5f656c;
+  text-decoration: none;
+}
 
 /* `Michelle CSS
 ----------------------------------------------------------------------------------------------------*/
+
+h2 { 
+  font-size: 16px;
+  font-weight: normal;
+  text-align: center;
+}
+
+.connect {
+  margin-top: 13px;
+}
+
+.connect h2 {
+  padding: 7px 0;
+}
+
+.header {
+  margin-bottom: 30px;
+}
+
+.social-ribbon {
+  background-image:url(file://localhost/Users/Michelle/Michelle/Web%20Development/2013/8:22:13%20-%20Brilliant%20Weddings/social-ribbon.jpg);
+  height: 36px;
+  width: 283px;
+}
+
+.social-ribbon li {
+  float: left;
+  padding: 5px 7px;
+  text-align: center;
+}
+
+.social-ribbon ul {
+  margin-left: 58px;
+}
+
 .top-nav {
   float: right;
 }
 
 .top-nav li {
   float: left;
-  padding: 10px;
+  padding: 7px;
 }
-
 
 
 
@@ -92,7 +134,9 @@ body {
 
 /* `Grid >> 12 Columns
 ----------------------------------------------------------------------------------------------------*/
-
+.wedding-image{
+  margin-left: 0px;
+}
 .container_12 .grid_1 {
   width: 60px;
 }
@@ -106,7 +150,7 @@ body {
 }
 
 .container_12 .grid_4 {
-  width: 300px;
+  width: 280px;
 }
 
 .container_12 .grid_5 {
@@ -122,7 +166,7 @@ body {
 }
 
 .container_12 .grid_8 {
-  width: 620px;
+  width: 600px;
 }
 
 .container_12 .grid_9 {
@@ -138,7 +182,8 @@ body {
 }
 
 .container_12 .grid_12 {
-  width: 940px;
+  width: 920px;
+  padding: 0 10px;
 }
 
 /* `Prefix Extra Space >> 12 Columns
