--- a/css/960_12_col.css
+++ b/css/960_12_col.css
@@ -13,15 +13,6 @@
   Note: IE6 works fine without this fix.
 */
 
-body {
-  min-width: 960px;
-  background-image:url('file://localhost/Users/Michelle/Michelle/Web%20Development/2013/8:22:13%20-%20Brilliant%20Weddings/hello.jpg');
-  background-repeat: repeat;
-  font-family: verdana;
-  font-size: 12px;
-  color: #5f656c;
-
-}
 
 /* `Container
 ----------------------------------------------------------------------------------------------------*/
@@ -370,6 +361,15 @@ body {
 /* `Michelle CSS
 ----------------------------------------------------------------------------------------------------*/
 
+body {
+  min-width: 960px;
+  background-image:url('file://localhost/Users/Michelle/Michelle/Web%20Development/2013/8:22:13%20-%20Brilliant%20Weddings/hello.jpg');
+  background-repeat: repeat;
+  font-family: verdana;
+  font-size: 12px;
+  color: #5f656c;
+}
+
 h2 { 
   font-size: 16px;
   font-weight: normal;
@@ -378,6 +378,45 @@ h2 {
 
 h2 span{
   margin-top: 10px;
+}
+
+h3 {
+  font-weight: normal;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
+footer h2 {
+  float: left;
+  margin: 10px 0;
+}
+
+footer li {
+  line-height: 24px;
+}
+
+footer a {
+  color: #000;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: #5f656c;
+}
+
+footer p {
+  line-height: 18px;
+  padding: 10px 0;
+}
+
+sub {
+  display: block;
+  font-size: 11px;
+  margin: 13px 0;
+}
+
+p {
+  line-height: 24px;
 }
 
 .connect {
@@ -391,6 +430,22 @@ h2 span{
 .dates {
   text-align: center;
 }
+
+.dates div {
+  padding: 5px 0;
+}
+
+.dates img {
+  padding: 10px 0;
+}
+.dates span {
+  padding-right: 20px;
+}
+
+.divider {
+  margin: 10px 0;
+}
+
 .dotted-1 {
   color: #d3e6e4;
   font-family: century gothic;
@@ -403,6 +458,7 @@ h2 span{
   font-family: century gothic;
   font-size: 75px;
   margin-top: -77px;
+  margin-bottom: 10px;
 }
 
 .email {
@@ -434,15 +490,11 @@ h2 span{
 
 .menu {
   background-image:url(file://localhost/Users/Michelle/Michelle/Web%20Development/2013/8:22:13%20-%20Brilliant%20Weddings/menu.jpg);
-  height: 70px;
-  margin: 0;
-  width: 960px;
-}
-
-.menu-container {
-  width: 960px;
   display: inline;
   float: left;
+  height: 70px;
+  margin-bottom: 10px;
+  width: 960px;
 }
 
 .menu-left {
@@ -450,22 +502,22 @@ h2 span{
   margin-left: -61px;
 }
 
-.menu-links li{
+.menu li{
   float: left;
   padding: 20px 10px;
 }
 
-.menu-links ul {
+.menu ul {
   margin: 0 0 0 30px;
 }
 
-.menu-links a {
+.menu a {
   color: #fff;
   font-size: 15px;
   text-decoration: none;
  }
 
-.menu-links li:hover {
+.menu li:hover {
   color: #fff;
   height: 17px;
 /* Fallback for web browsers that don't support RGBa */
@@ -479,11 +531,11 @@ h2 span{
 }
 
 .menu-right {
-  margin-left: 960px;
-  margin-top: -90px;
+  float: right;
+  margin-right: -62px;
 }
 
-.news-letter {
+.news-letter h2{
   background-image:url(file://localhost/Users/Michelle/Michelle/Web%20Development/2013/8:22:13%20-%20Brilliant%20Weddings/news-letter.jpg);
   background-repeat: no-repeat;
   clear: both; 
@@ -491,8 +543,8 @@ h2 span{
   width: 290px;
   }
 
-.news-letter-container {
-  border-radius: 2px;
+.news-letter {
+  border-radius: 6px;
   box-shadow: 10px #000;
   border: 1px solid #d8dada;
   color: #6c7171;
@@ -537,6 +589,19 @@ box-shadow: inset 0px 0px 44px -17px rgba(7,8,8,1);}
 
 .social-ribbon ul {
   margin-left: 58px;
+}
+
+.submit {
+  border-top: dotted 3px #c0c7c7;
+  border-bottom: dotted 3px #c0c7c7;
+  border-right: none;
+  border-left: none;
+  background-color: transparent;
+  color: #5f656c;
+  font-size:1em;
+  overflow:visible; 
+  padding: 0;
+  text-decoration: none; 
 }
 
 .top-nav {
