--- a/css/960_12_col.css
+++ b/css/960_12_col.css
@@ -380,7 +380,7 @@ h2 span{
   margin-top: 10px;
 }
 
-h3 {
+.post h3 {
   font-weight: normal;
   font-size: 20px;
   text-transform: uppercase;
@@ -417,6 +417,11 @@ sub {
 
 p {
   line-height: 26px;
+}
+
+.ad-small img {
+  float: left;
+  margin: 10px 15px 10px 0;
 }
 
 .connect {
@@ -477,7 +482,7 @@ p {
 }
 
 .light-border {
-  border-radius: 2px;
+  border-radius: 3px;
   border: 1px solid #d8dada;
   color: #6c7171;
   font-size: 14px;
@@ -491,6 +496,11 @@ p {
 .margin-8 {
   margin-left: 8px;
 }
+
+.margin-40 {
+  margin-left: 30px;
+}
+
 .margin-override {
   margin-left: 0;
 }
@@ -542,14 +552,6 @@ p {
   margin-right: -62px;
 }
 
-.news-letter h2{
-  background-image:url(file://localhost/Users/Michelle/Michelle/Web%20Development/2013/8:22:13%20-%20Brilliant%20Weddings/news-letter.jpg);
-  background-repeat: no-repeat;
-  clear: both; 
-  height: 36px;
-  width: 290px;
-  }
-
 .news-letter {
   border-radius: 6px;
   box-shadow: 10px #000;
@@ -561,6 +563,30 @@ p {
 -webkit-box-shadow: inset 0px 0px 44px -17px rgba(7,8,8,1);
 -moz-box-shadow: inset 0px 0px 44px -17px rgba(7,8,8,1);
 box-shadow: inset 0px 0px 44px -17px rgba(7,8,8,1);}
+
+.news-letter input {
+  padding: 5px;
+}
+
+.news-letter h2{
+  background-image:url(file://localhost/Users/Michelle/Michelle/Web%20Development/2013/8:22:13%20-%20Brilliant%20Weddings/news-letter.jpg);
+  background-repeat: no-repeat;
+  position: relative;
+  top: -7px;
+  clear: both; 
+  height: 36px;
+  width: 290px;
+  }
+
+.news-letter h2 span {
+  position: relative;
+  top: 7px;
+}
+
+.news-letter div {
+  margin: 10px 10px;
+}
+
 
 .news-letter-container div{
   padding: 6px;
@@ -652,7 +678,7 @@ box-shadow: inset 0px 0px 44px -17px rgba(7,8,8,1);}
   margin-top: 5px;
 }
 
-.sidebar h2 {
+.sidebar h3 {
   background-image:url(file://localhost/Users/Michelle/Michelle/Web%20Development/2013/8:22:13%20-%20Brilliant%20Weddings/sidebar.jpg);
   height: 47px;
   width: 302px;
