--- a/css/960_12_col.css
+++ b/css/960_12_col.css
@@ -363,7 +363,7 @@
 
 body {
   min-width: 960px;
-  background-image:url('file://localhost/Users/Michelle/Michelle/Web%20Development/2013/8:22:13%20-%20Brilliant%20Weddings/hello.jpg');
+  background-image:url('../hello.jpg');
   background-repeat: repeat;
   font-family: verdana;
   font-size: 12px;
@@ -506,7 +506,7 @@ p {
 }
 
 .menu {
-  background-image:url(file://localhost/Users/Michelle/Michelle/Web%20Development/2013/8:22:13%20-%20Brilliant%20Weddings/menu.jpg);
+  background-image:url(../menu.jpg);
   display: inline;
   float: left;
   height: 70px;
@@ -569,7 +569,7 @@ box-shadow: inset 0px 0px 44px -17px rgba(7,8,8,1);}
 }
 
 .news-letter h2{
-  background-image:url(file://localhost/Users/Michelle/Michelle/Web%20Development/2013/8:22:13%20-%20Brilliant%20Weddings/news-letter.jpg);
+  background-image:url(../news-letter.jpg);
   background-repeat: no-repeat;
   position: relative;
   top: -7px;
@@ -645,7 +645,7 @@ box-shadow: inset 0px 0px 44px -17px rgba(7,8,8,1);}
 
 .post-footer div {
   color: #fff;
-  background-image:url(file://localhost/Users/Michelle/Michelle/Web%20Development/2013/8:22:13%20-%20Brilliant%20Weddings/comments.jpg);
+  background-image:url(../comments.jpg);
   background-repeat: no-repeat;
   float: left;
   height: 20px;
@@ -679,13 +679,13 @@ box-shadow: inset 0px 0px 44px -17px rgba(7,8,8,1);}
 }
 
 .sidebar h3 {
-  background-image:url(file://localhost/Users/Michelle/Michelle/Web%20Development/2013/8:22:13%20-%20Brilliant%20Weddings/sidebar.jpg);
+  background-image:url(../sidebar.jpg);
   height: 47px;
   width: 302px;
 }
 
 .social-ribbon {
-  background-image:url(file://localhost/Users/Michelle/Michelle/Web%20Development/2013/8:22:13%20-%20Brilliant%20Weddings/social-ribbon.jpg);
+  background-image:url(../social-ribbon.jpg);
   height: 36px;
   width: 283px;
 }
