--- a/css/960_12_col.css
+++ b/css/960_12_col.css
@@ -429,7 +429,26 @@ p {
   float: left;
 }
 
-.connect {
+.carousel-thumb .carousel-thumb5 {
+  margin-right: 0;
+  margin-left:-1px;
+}
+
+.carousel-thumb {
+  margin: 10px 0;
+}
+
+.carousel-thumb li {
+  border: 3px solid #97a4a2 ;
+  float: left;
+  margin-right: 23px;
+}
+
+.carousel-thumb li:hover {
+
+} 
+
+.connect {  
   float:right;
   margin-top: 13px;
 }
@@ -457,19 +476,8 @@ p {
   margin: 10px 0;
 }
 
-.dotted-1 {
-  color: #d3e6e4;
-  font-family: century gothic;
-  font-size: 75px;
-  margin-top: -40px;
-}
-
-.dotted-2 {
-  color: #d3e6e4;
-  font-family: century gothic;
-  font-size: 75px;
-  margin-top: -77px;
-  margin-bottom: 10px;
+.dotted {
+  margin: 0 0 20px -5px;
 }
 
 .email {
@@ -654,8 +662,10 @@ box-shadow: inset 0px 0px 44px -17px rgba(7,8,8,1);}
   position: relative;
   top: 9px;
 }
-
-.ou
+  
+.post3 li {
+  margin: 10px 0;
+}
 
 .post p {
   margin: 20px 0;
